--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,6 +188,19 @@ img {
   position: absolute;
   transform: translate(-50%, -50%);
 }
+.header__logo #O1, .header__logo #S, .header__logo #O2, .header__logo #I {
+  transform: translateY(200px);
+  animation: waveLoop 4s infinite ease-in-out;
+}
+.header__logo #S {
+  animation-delay: 0.2s;
+}
+.header__logo #O2 {
+  animation-delay: 0.4s;
+}
+.header__logo #I {
+  animation-delay: 0.6s;
+}
 .header__text {
   left: 50%;
   bottom: 5.5%;
@@ -231,6 +244,117 @@ img {
 /*-----------------------------------------------------*/
 /*-----------------------------------------------------*/
 /*-----------------------------------------------------*/
+.main #sectionDescription {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.main #sectionDescription .description {
+  text-align: center;
+}
+.main #sectionDescription .description__title {
+  margin-bottom: 40px;
+}
+.main #sectionDescription .description__title img {
+  max-width: 200px;
+  margin: 0 auto;
+}
+.main #sectionDescription .description__title h2 {
+  margin: 15px 0;
+}
+.main #sectionDescription .description__content {
+  margin: 50px 0;
+  font-size: 20px;
+}
+.main #sectionDescription .description__footer {
+  margin-top: 60px;
+  font-size: 20px;
+}
+.main #sectionDescription .description__footer p {
+  margin-bottom: 30px;
+}
+.main #sectionDescription .toggler {
+  display: flex;
+  font-weight: bold;
+  position: relative;
+  justify-content: center;
+}
+.main #sectionDescription .toggler::before {
+  content: "";
+  top: 50%;
+  left: 50%;
+  height: 50%;
+  position: absolute;
+  border: 1px solid #000;
+  transform: translate(-50%, -50%);
+}
+.main #sectionDescription .toggler input {
+  display: none;
+}
+.main #sectionDescription .toggler--language {
+  gap: 60px;
+  font-size: 20px;
+}
+.main #sectionDescription .toggler--language label {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  transition: color 0.3s ease-in-out;
+}
+.main #sectionDescription .toggler--language label::before {
+  content: "";
+  top: -50%;
+  left: -50%;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  border-radius: 50%;
+  border: 2px solid transparent;
+  transform: translate(50%, 50%);
+  transition: border-color 0.3s ease-in-out;
+}
+.main #sectionDescription .toggler--language input:checked + label {
+  color: #000;
+}
+.main #sectionDescription .toggler--language input:checked + label::before {
+  border-color: #000;
+}
+.main #sectionDescription .toggler--language label:hover::before {
+  border-color: #000;
+  animation: borderCircle 0.5s linear forwards;
+}
+.main #sectionDescription .toggler--category {
+  gap: 50px;
+  font-size: 24px;
+}
+.main #sectionDescription .toggler--category::before {
+  height: 100%;
+}
+.main #sectionDescription .toggler--category label {
+  padding: 20px 80px;
+}
+@keyframes borderCircle {
+  0% {
+    clip-path: inset(0 100% 0 0);
+  }
+  25% {
+    clip-path: inset(0 0 0 100%);
+  }
+  50% {
+    clip-path: inset(100% 0 0 0);
+  }
+  75% {
+    clip-path: inset(0 0 100% 0);
+  }
+  100% {
+    clip-path: inset(0);
+  }
+}
+
 /*-----------------------------------------------------*/
 /*-----------------------------------------------------*/
 /*-----------------------------------------------------*/
@@ -348,5 +472,22 @@ img {
   }
   100% {
     transform: scale(1.1);
+  }
+}
+@keyframes waveLoop {
+  0% {
+    transform: translateY(200px);
+  }
+  20% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(0);
+  }
+  80% {
+    transform: translateY(200px);
+  }
+  100% {
+    transform: translateY(200px);
   }
 }
