--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -52,6 +52,13 @@ img {
 		left: 50%;
 		position: absolute;
 		transform: translate(-50%, -50%);
+		#O1, #S, #O2, #I {
+			transform: translateY(200px);
+			animation: waveLoop 4s infinite ease-in-out;
+		}
+		#S { animation-delay: 0.2s; }
+		#O2 { animation-delay: 0.4s; }
+		#I { animation-delay: 0.6s; }
 	}
 	&__text {
 		left: 50%;
@@ -109,6 +116,105 @@ img {
 /*-----------------------------------------------------*/
 
 .main {
+	#sectionDescription {
+		height: 100vh;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		
+		.description {
+			text-align: center;
+			&__title {
+				margin-bottom: 40px;
+				img {
+					max-width: 200px;
+					margin: 0 auto;
+				}
+				h2 { margin: 15px 0; }
+			}
+			&__content {
+				margin: 50px 0;
+				font-size: 20px;
+			}
+			&__footer {
+				margin-top: 60px;
+				font-size: 20px;
+				p { margin-bottom: 30px; }
+			}
+		}
+
+		.toggler {
+			display: flex;
+			font-weight: bold;
+			position: relative;
+			justify-content: center;
+
+			&::before {
+				content: "";
+				top: 50%;
+				left: 50%;
+				height: 50%;
+				position: absolute;
+				border: 1px solid #000;
+				transform: translate(-50%, -50%);
+			}
+
+			input { display: none; }
+
+			&--language {
+				gap: 60px;
+				font-size: 20px;
+					
+				label {
+					width: 50px;
+					height: 50px;
+					display: flex;
+					position: relative;
+					align-items: center;
+					justify-content: center;
+					transition: color 0.3s ease-in-out;
+			
+					&::before {
+						content: "";
+						top: -50%;
+						left: -50%;
+						width: 100%;
+						height: 100%;
+						position: absolute;
+						border-radius: 50%;
+						border: 2px solid transparent;
+						transform: translate(50%, 50%);
+						transition: border-color 0.3s ease-in-out;
+					}
+				}
+			
+				input:checked + label {
+					color: #000;
+					&::before { border-color: #000; }
+				}
+			
+				label:hover::before {
+					border-color: #000;
+					animation: borderCircle 0.5s linear forwards;
+				}
+			}
+
+			&--category {
+				gap: 50px;
+				font-size: 24px;
+				&::before { height: 100%; }
+				label { padding: 20px 80px; }
+			}
+		}
+		
+		@keyframes borderCircle {
+			0% { clip-path: inset(0 100% 0 0); }
+			25% { clip-path: inset(0 0 0 100%); }
+			50% { clip-path: inset(100% 0 0 0); }
+			75% { clip-path: inset(0 0 100% 0); }
+			100% { clip-path: inset(0); }
+		}		
+	}
 }
 
 /*-----------------------------------------------------*/
@@ -246,4 +352,12 @@ img {
 @keyframes zoomEffect {
   0% { transform: scale(1); }
   100% { transform: scale(1.1); }
+}
+
+@keyframes waveLoop {
+	0% { transform: translateY(200px); }
+	20% { transform: translateY(0); }
+	50% { transform: translateY(0); }
+	80% { transform: translateY(200px); }
+	100% { transform: translateY(200px); }
 }
