--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -292,7 +292,7 @@ img {
   text-align: center;
 }
 .main #section-description .description__title {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 .main #section-description .description__title img {
   max-width: 100px;
@@ -312,6 +312,37 @@ img {
 }
 .main #section-description .description__footer p {
   margin-bottom: 10px;
+}
+.main #section-description .category {
+  display: flex;
+}
+.main #section-description .category a {
+  color: #000;
+  font-size: 14px;
+  padding: 10px 40px;
+  text-decoration: none;
+  position: relative;
+  transition: all 0.3s ease;
+}
+.main #section-description .category a:first-child {
+  border-right: 1px solid #000;
+}
+.main #section-description .category a:hover {
+  color: #000;
+}
+.main #section-description .category a::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 0;
+  height: 2px;
+  background-color: #000;
+  transform: translateX(-50%);
+  transition: width 0.3s ease;
+}
+.main #section-description .category a:hover::after {
+  width: 50%;
 }
 .main #section-description .toggler {
   display: flex;
@@ -593,6 +624,64 @@ img {
   }
   /*-----------------------------------------------------*/
   /*-----------------------------------------------------*/
+  .nav {
+    padding: 15px 25px;
+  }
+  .nav__item {
+    gap: 25px;
+    justify-content: end;
+  }
+  .nav__item a {
+    display: none;
+  }
+  .main .slider {
+    flex-direction: column;
+  }
+  .main .slider__slide-reveal {
+    animation: reveal-left 1s ease-in-out forwards;
+  }
+  .main .slider__slide-reveal-reverse {
+    animation: reveal-right 1s ease-in-out forwards;
+  }
+  .main .product-container .product {
+    width: 100%;
+  }
+  .main .product-container .product--category {
+    height: 50vh;
+  }
+  .main .product-container .product__image {
+    height: 110vh;
+  }
+  .main .product-container .product__image img {
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .main .product-container .product__image--with-frame {
+    padding: 0 45px;
+  }
+  .main .product-container .product__image--right {
+    padding: 0 0 0 135px;
+  }
+  .main .product-container .product__price {
+    color: #000 !important;
+  }
+  .main #gentle-lady .product:first-child {
+    order: 2;
+  }
+  .main #culture-girl {
+    padding-top: 0px;
+  }
+  .swiper {
+    margin: 0;
+    width: 100%;
+  }
+  .swiper .swiper-slide {
+    max-width: 100vw;
+  }
+  .footer {
+    height: 40vh;
+  }
 }
 /*-----------------------------------------------------*/
 /*-----------------------------------------------------*/
@@ -610,6 +699,26 @@ img {
   0% {
     -webkit-clip-path: inset(100% 0 0 0);
             clip-path: inset(100% 0 0 0);
+  }
+  100% {
+    -webkit-clip-path: inset(0);
+            clip-path: inset(0);
+  }
+}
+@keyframes reveal-left {
+  0% {
+    -webkit-clip-path: inset(0 100% 0 0);
+            clip-path: inset(0 100% 0 0);
+  }
+  100% {
+    -webkit-clip-path: inset(0);
+            clip-path: inset(0);
+  }
+}
+@keyframes reveal-right {
+  0% {
+    -webkit-clip-path: inset(0 0 0 100%);
+            clip-path: inset(0 0 0 100%);
   }
   100% {
     -webkit-clip-path: inset(0);
