--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,8 +228,10 @@ img {
   transform: translate(-50%, -50%);
 }
 .main .hero__logo svg {
-  max-width: 280px;
   width: 100%;
+  height: 100%;
+  max-width: 280px;
+  max-height: 100px;
 }
 .main .hero__logo #O1, .main .hero__logo #S, .main .hero__logo #O2, .main .hero__logo #I {
   transform: translateY(200px);
