--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -99,8 +99,10 @@ img {
       position: absolute;
       transform: translate(-50%, -50%);
       svg {
-        max-width: 280px;
         width: 100%;
+        height: 100%;
+        max-width: 280px;
+        max-height: 100px;
       }
       #O1, #S, #O2, #I {
         transform: translateY(200px);
